--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "expo-image-picker": "~16.1.4",
     "expo-file-system": "~18.1.11",
     "expo-location": "~18.1.6",
-    "react-native-maps": "1.20.1"
+    "react-native-maps": "1.20.1",
+    "expo-sqlite": "~15.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
